Futzing with inventory sections.

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,11 +1,15 @@
 {
+"MB.Add": "Add",  
 "MB.Description": "Description",
 "MB.Details": "Details",
 "MB.ItemAgilityDRModifier": "Agility DR Modifier",
 "MB.ItemCapacity": "Capacity",
+"MB.ItemCreate": "Create Item",
 "MB.ItemDamageDie": "Damage Die",
 "MB.ItemDamageReductionDie": "Damage Reduction Die",
 "MB.ItemDefenseDRModifier": "Defense DR Modifier",
+"MB.ItemDelete": "Delete Item",
+"MB.ItemEdit": "Edit Item",
 "MB.ItemHanded": "Handed",  
 "MB.ItemName": "Item Name",
 "MB.ItemPrice": "Price",
