Add abilities tab; make weapon attack and damage rollable.

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,19 @@
 {
-"MB.Add": "Add",  
+"MB.AbilityAgility": "Agility",
+"MB.AbilityPresence": "Presence",
+"MB.AbilityStrength": "Strength",
+"MB.AbilityToughness": "Toughness",
+"MB.Add": "Add",
+"MB.ArmorTierNone": "None",
+"MB.ArmorTierLight": "Light",
+"MB.ArmorTierMedium": "Medium",
+"MB.ArmorTierHeavy": "Heavy",
+"MB.Attack": "Attack",
+"MB.Damage": "damage",
 "MB.Description": "Description",
 "MB.Details": "Details",
+"MB.HandedOne": "One-handed",
+"MB.HandedTwo": "Two-handed",
 "MB.ItemAgilityDRModifier": "Agility DR Modifier",
 "MB.ItemCapacity": "Capacity",
 "MB.ItemCreate": "Create Item",
@@ -15,6 +27,16 @@
 "MB.ItemPrice": "Price",
 "MB.ItemScrollType": "Scroll Type",
 "MB.ItemTier": "Tier",
-"MB.ItemWeaponType": "Weapon Type",  
-"MB.Title": "MÖRK BORG"
+"MB.ItemTypeArmor": "Armor",
+"MB.ItemTypeContainer": "Container",
+"MB.ItemTypeMisc": "Misc",
+"MB.ItemTypeScroll": "Scroll",
+"MB.ItemTypeWeapon": "Weapon",
+"MB.ItemWeaponType": "Weapon Type",
+"MB.Roll": "Roll",
+"MB.ScrollTypeSacred": "Sacred",
+"MB.ScrollTypeUnclean": "Unclean",
+"MB.Title": "MÖRK BORG",
+"MB.WeaponTypeMelee": "Melee",
+"MB.WeaponTypeRanged": "Ranged"
 }
