Move damage reduction die into a sheet-calculated data ivar.

--- a/lang/en.json
+++ b/lang/en.json
@@ -10,6 +10,7 @@
 "MB.ArmorTierHeavy": "Heavy",
 "MB.Attack": "Attack",
 "MB.Damage": "damage",
+"MB.DamageReduction": "Damage Reduction",
 "MB.Defend": "Defend",
 "MB.Description": "Description",
 "MB.Details": "Details",
@@ -27,7 +28,7 @@
 "MB.ItemName": "Item Name",
 "MB.ItemPrice": "Price",
 "MB.ItemScrollType": "Scroll Type",
-"MB.ItemTier": "Tier",
+"MB.ItemArmorTier": "Tier",
 "MB.ItemTypeArmor": "Armor",
 "MB.ItemTypeContainer": "Container",
 "MB.ItemTypeMisc": "Misc",
