--- a/lang/en.json
+++ b/lang/en.json
@@ -9,6 +9,8 @@
 "MB.ArmorTierMedium": "Medium",
 "MB.ArmorTierHeavy": "Heavy",
 "MB.Attack": "Attack",
+"MB.ClassName": "Class Name",
+"MB.ClassOmenDie": "Omen Die",
 "MB.Damage": "damage",
 "MB.DamageReduction": "Damage Reduction",
 "MB.Defend": "Defend",
@@ -30,15 +32,21 @@
 "MB.ItemScrollType": "Scroll Type",
 "MB.ItemArmorTier": "Tier",
 "MB.ItemTypeArmor": "Armor",
+"MB.ItemTypeArmorPlural": "Armor",
 "MB.ItemTypeContainer": "Container",
+"MB.ItemTypeContainerPlural": "Containers",
 "MB.ItemTypeMisc": "Misc",
+"MB.ItemTypeMiscPlural": "Equipment",
 "MB.ItemTypeScroll": "Scroll",
+"MB.ItemTypeScrollPlural": "Scrolls",
 "MB.ItemTypeWeapon": "Weapon",
+"MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemWeaponType": "Weapon Type",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.Test": "Test",
 "MB.Title": "MÖRK BORG",
 "MB.WeaponTypeMelee": "Melee",
-"MB.WeaponTypeRanged": "Ranged"
+"MB.WeaponTypeRanged": "Ranged",
+"MB.WieldPower": "Wield Power"
 }
