--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,7 @@
 "MB.Attack": "Attack",
 "MB.ClassName": "Class Name",
 "MB.ClassOmenDie": "Omen Die",
+"MB.Current": "Current",
 "MB.Damage": "damage",
 "MB.DamageReduction": "Damage Reduction",
 "MB.Defend": "Defend",
@@ -18,6 +19,7 @@
 "MB.Details": "Details",
 "MB.HandedOne": "One-handed",
 "MB.HandedTwo": "Two-handed",
+"MB.HitPoints": "Hit Points",
 "MB.ItemAgilityDRModifier": "Agility DR Modifier",
 "MB.ItemCapacity": "Capacity",
 "MB.ItemCreate": "Create Item",
@@ -42,6 +44,9 @@
 "MB.ItemTypeWeapon": "Weapon",
 "MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemWeaponType": "Weapon Type",
+"MB.Max": "Max",
+"MB.Omens": "Omens",
+"MB.Powers": "Powers",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.Test": "Test",
