The styling march continues.

--- a/lang/en.json
+++ b/lang/en.json
@@ -47,6 +47,7 @@
 "MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemWeaponType": "Weapon Type",
 "MB.Max": "Max",
+"MB.Name": "Name",
 "MB.Omens": "Omens",
 "MB.Powers": "Powers",
 "MB.ScrollTypeSacred": "Sacred",
