--- a/lang/en.json
+++ b/lang/en.json
@@ -17,9 +17,11 @@
 "MB.Defend": "Defend",
 "MB.Description": "Description",
 "MB.Details": "Details",
+"MB.EnemiesBegin": "Enemies begin",
 "MB.HandedOne": "One-handed",
 "MB.HandedTwo": "Two-handed",
 "MB.HitPoints": "Hit Points",
+"MB.Initiative": "Initiative",
 "MB.ItemAgilityDRModifier": "Agility DR Modifier",
 "MB.ItemCapacity": "Capacity",
 "MB.ItemCreate": "Create Item",
@@ -49,11 +51,15 @@
 "MB.Max": "Max",
 "MB.Name": "Name",
 "MB.Omens": "Omens",
+"MB.PartyInitiative": "Party Initiative",
 "MB.PerDay": "Per Day",
 "MB.PerRest": "Per Rest",
+"MB.PlayerCharactersBegin": "Player Characters begin",
+"MB.PlayerInitiative": "Player Initiative",
 "MB.Powers": "Powers",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
+"MB.Silver": "Silver",
 "MB.Test": "Test",
 "MB.Title": "MÖRK BORG",
 "MB.WeaponTypeMelee": "Melee",
