--- a/lang/en.json
+++ b/lang/en.json
@@ -4,16 +4,21 @@
 "MB.AbilityStrength": "Strength",
 "MB.AbilityToughness": "Toughness",
 "MB.Add": "Add",
+"MB.Armor": "Armor",
 "MB.ArmorTierNone": "None",
 "MB.ArmorTierLight": "Light",
 "MB.ArmorTierMedium": "Medium",
 "MB.ArmorTierHeavy": "Heavy",
 "MB.Attack": "Attack",
+"MB.Attacks": "Attacks",
+"MB.Bounties": "Bounties",
 "MB.ClassName": "Class Name",
 "MB.ClassOmenDie": "Omen Die",
+"MB.CreatureAttack": "Creature Attack",
 "MB.Current": "Current",
 "MB.Damage": "damage",
 "MB.DamageReduction": "Damage Reduction",
+"MB.DamageReductionDie": "Damage Reduction Die",
 "MB.Defend": "Defend",
 "MB.Description": "Description",
 "MB.Details": "Details",
@@ -49,6 +54,7 @@
 "MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemWeaponType": "Weapon Type",
 "MB.Max": "Max",
+"MB.Morale": "Morale",
 "MB.Name": "Name",
 "MB.Omens": "Omens",
 "MB.PartyInitiative": "Party Initiative",
@@ -56,10 +62,12 @@
 "MB.PerRest": "Per Rest",
 "MB.PlayerCharactersBegin": "Player Characters begin",
 "MB.PlayerInitiative": "Player Initiative",
+"MB.PlusSpecial": "Plus Special",
 "MB.Powers": "Powers",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.Silver": "Silver",
+"MB.Special": "Special",
 "MB.Test": "Test",
 "MB.Title": "MÖRK BORG",
 "MB.WeaponTypeMelee": "Melee",
