Style creature sheet.

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,12 +11,14 @@
 "MB.ArmorTierHeavy": "Heavy",
 "MB.Attack": "Attack",
 "MB.Attacks": "Attacks",
+"MB.Bounty": "Bounty",
 "MB.Bounties": "Bounties",
 "MB.ClassName": "Class Name",
 "MB.ClassOmenDie": "Omen Die",
 "MB.CreatureAttack": "Creature Attack",
 "MB.Current": "Current",
 "MB.Damage": "damage",
+"MB.DamageDie": "Damage Die",
 "MB.DamageReduction": "Damage Reduction",
 "MB.DamageReductionDie": "Damage Reduction Die",
 "MB.Defend": "Defend",
