Start iterating towards new char sheet design.

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,8 +11,10 @@
 "MB.ArmorTierHeavy": "Heavy",
 "MB.Attack": "Attack",
 "MB.Attacks": "Attacks",
+"MB.Bio": "Bio",
 "MB.Bounty": "Bounty",
 "MB.Bounties": "Bounties",
+"MB.Class": "Class",
 "MB.ClassName": "Class Name",
 "MB.ClassOmenDie": "Omen Die",
 "MB.CreatureAttack": "Creature Attack",
@@ -25,6 +27,7 @@
 "MB.Description": "Description",
 "MB.Details": "Details",
 "MB.EnemiesBegin": "Enemies begin",
+"MB.Equipment": "Equipment",
 "MB.HandedOne": "One-handed",
 "MB.HandedTwo": "Two-handed",
 "MB.HitPoints": "Hit Points",
@@ -58,6 +61,7 @@
 "MB.Max": "Max",
 "MB.Morale": "Morale",
 "MB.Name": "Name",
+"MB.Notes": "Notes",
 "MB.Omens": "Omens",
 "MB.PartyInitiative": "Party Initiative",
 "MB.PerDay": "Per Day",
@@ -72,6 +76,7 @@
 "MB.Special": "Special",
 "MB.Test": "Test",
 "MB.Title": "MÖRK BORG",
+"MB.Violence": "Violence",
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
 "MB.WieldPower": "Wield Power"
