New header phase 1.

--- a/lang/en.json
+++ b/lang/en.json
@@ -59,6 +59,7 @@
 "MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemWeaponType": "Weapon Type",
 "MB.Max": "Max",
+"MB.Miseries": "Miseries",
 "MB.Morale": "Morale",
 "MB.Name": "Name",
 "MB.Notes": "Notes",
