--- a/lang/en.json
+++ b/lang/en.json
@@ -4,6 +4,8 @@
 "MB.AbilityStrength": "Strength",
 "MB.AbilityToughness": "Toughness",
 "MB.Add": "Add",
+"MB.Agility": "Agility",
+"MB.AgilityAbbreviation": "AGI",
 "MB.Armor": "Armor",
 "MB.ArmorTierNone": "None",
 "MB.ArmorTierLight": "Light",
@@ -71,12 +73,18 @@
 "MB.PlayerInitiative": "Player Initiative",
 "MB.PlusSpecial": "Plus Special",
 "MB.Powers": "Powers",
+"MB.Presence": "Presence",
+"MB.PresenceAbbreviation": "PRE",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.Silver": "Silver",
 "MB.Special": "Special",
+"MB.Strength": "Strength",
+"MB.StrengthAbbreviation": "STR",
 "MB.Test": "Test",
 "MB.Title": "MÖRK BORG",
+"MB.Toughness": "Toughness",
+"MB.ToughnessAbbreviation": "TOU",
 "MB.Violence": "Violence",
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
