Move to black bg white text.

--- a/lang/en.json
+++ b/lang/en.json
@@ -16,6 +16,7 @@
 "MB.Bio": "Bio",
 "MB.Bounty": "Bounty",
 "MB.Bounties": "Bounties",
+"MB.CarryingCapacity": "Carrying Capacity",
 "MB.Class": "Class",
 "MB.ClassName": "Class Name",
 "MB.ClassOmenDie": "Omen Die",
