Style equipment tab.

--- a/lang/en.json
+++ b/lang/en.json
@@ -16,6 +16,7 @@
 "MB.Bio": "Bio",
 "MB.Bounty": "Bounty",
 "MB.Bounties": "Bounties",
+"MB.Burdens": "Burdens",
 "MB.CarryingCapacity": "Carrying Capacity",
 "MB.Class": "Class",
 "MB.ClassName": "Class Name",
@@ -66,6 +67,7 @@
 "MB.Morale": "Morale",
 "MB.Name": "Name",
 "MB.Notes": "Notes",
+"MB.Obituary": "Obituary",
 "MB.Omens": "Omens",
 "MB.PartyInitiative": "Party Initiative",
 "MB.PerDay": "Per Day",
@@ -76,6 +78,7 @@
 "MB.Powers": "Powers",
 "MB.Presence": "Presence",
 "MB.PresenceAbbreviation": "PRE",
+"MB.Scrawls": "Scrawls",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.Silver": "Silver",
