Collapse bio/class into a single tab.

--- a/lang/en.json
+++ b/lang/en.json
@@ -89,6 +89,7 @@
 "MB.Title": "MÖRK BORG",
 "MB.Toughness": "Toughness",
 "MB.ToughnessAbbreviation": "TOU",
+"MB.Treasures": "Treasures",
 "MB.Violence": "Violence",
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
