--- a/lang/en.json
+++ b/lang/en.json
@@ -91,6 +91,7 @@
 "MB.ToughnessAbbreviation": "TOU",
 "MB.Treasures": "Treasures",
 "MB.Violence": "Violence",
+"MB.UsesRemaining": "Uses Remaining",
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
 "MB.WieldPower": "Wield Power"
