Make Wield a Power button rollable.

--- a/lang/en.json
+++ b/lang/en.json
@@ -94,5 +94,5 @@
 "MB.UsesRemaining": "Uses Remaining",
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
-"MB.WieldPower": "Wield Power"
+"MB.WieldAPower": "Wield a Power"
 }
