Start implementing violence tab.

--- a/lang/en.json
+++ b/lang/en.json
@@ -35,6 +35,7 @@
 "MB.HandedOne": "One-handed",
 "MB.HandedTwo": "Two-handed",
 "MB.HitPoints": "Hit Points",
+"MB.IncomingAttack": "Incoming Attack",
 "MB.Initiative": "Initiative",
 "MB.ItemAgilityDRModifier": "Agility DR Modifier",
 "MB.ItemCapacity": "Capacity",
@@ -81,6 +82,7 @@
 "MB.Scrawls": "Scrawls",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
+"MB.Shield": "Shield",
 "MB.Silver": "Silver",
 "MB.Special": "Special",
 "MB.Strength": "Strength",
