Implement armor tier radio styling.

--- a/lang/en.json
+++ b/lang/en.json
@@ -13,10 +13,8 @@
 "MB.ArmorTierHeavy": "Heavy",
 "MB.Attack": "Attack",
 "MB.Attacks": "Attacks",
-"MB.Bio": "Bio",
 "MB.Bounty": "Bounty",
 "MB.Bounties": "Bounties",
-"MB.Burdens": "Burdens",
 "MB.CarryingCapacity": "Carrying Capacity",
 "MB.Class": "Class",
 "MB.ClassName": "Class Name",
@@ -87,7 +85,7 @@
 "MB.Special": "Special",
 "MB.Strength": "Strength",
 "MB.StrengthAbbreviation": "STR",
-"MB.Test": "Test",
+"MB.Tier": "Tier",
 "MB.Title": "MÖRK BORG",
 "MB.Toughness": "Toughness",
 "MB.ToughnessAbbreviation": "TOU",
