Localize some strings.

--- a/lang/en.json
+++ b/lang/en.json
@@ -13,6 +13,8 @@
 "MB.ArmorTierHeavy": "Heavy",
 "MB.Attack": "Attack",
 "MB.Attacks": "Attacks",
+"MB.AttackCritText": "Crit: x2 damage, target armor reduced one tier",
+"MB.AttackFumbleText": "Fumble: Weapon breaks or is lost",
 "MB.Bounty": "Bounty",
 "MB.Bounties": "Bounties",
 "MB.CarryingCapacity": "Carrying Capacity",
@@ -26,6 +28,8 @@
 "MB.DamageReduction": "Damage Reduction",
 "MB.DamageReductionDie": "Damage Reduction Die",
 "MB.Defend": "Defend",
+"MB.DefendCritText": "Crit: Gain free attack",
+"MB.DefendFumbleText": "Fumble: Take double damage, armor reduced one tier",
 "MB.Description": "Description",
 "MB.Details": "Details",
 "MB.EnemiesBegin": "Enemies begin",
@@ -75,12 +79,14 @@
 "MB.PlayerInitiative": "Player Initiative",
 "MB.PlusSpecial": "Plus Special",
 "MB.Powers": "Powers",
+"MB.PowersPerDayText": "PRESENCE+d4 times per day",
 "MB.Presence": "Presence",
 "MB.PresenceAbbreviation": "PRE",
 "MB.Scrawls": "Scrawls",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.Shield": "Shield",
+"MB.ShieldUseText": "-1 damage, or break to ignore one attack",
 "MB.Silver": "Silver",
 "MB.Special": "Special",
 "MB.Strength": "Strength",
@@ -94,5 +100,6 @@
 "MB.UsesRemaining": "Uses Remaining",
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
-"MB.WieldAPower": "Wield a Power"
+"MB.WieldAPower": "Wield a Power",
+"MB.WieldAPowerText": "Presence DR12, or -d2 HP and no Powers for 1 hr"
 }
