Implement equipped/unequipped for weapons, armor, and shield.

--- a/lang/en.json
+++ b/lang/en.json
@@ -34,6 +34,7 @@
 "MB.Details": "Details",
 "MB.EnemiesBegin": "Enemies begin",
 "MB.Equipment": "Equipment",
+"MB.Equipped": "Equipped",
 "MB.HandedOne": "One-handed",
 "MB.HandedTwo": "Two-handed",
 "MB.HitPoints": "Hit Points",
@@ -97,6 +98,7 @@
 "MB.ToughnessAbbreviation": "TOU",
 "MB.Treasures": "Treasures",
 "MB.Violence": "Violence",
+"MB.Unequipped": "Unequipped",
 "MB.UsesRemaining": "Uses Remaining",
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
