Slight violence formatting tweaks.

--- a/lang/en.json
+++ b/lang/en.json
@@ -13,8 +13,8 @@
 "MB.ArmorTierHeavy": "Heavy",
 "MB.Attack": "Attack",
 "MB.Attacks": "Attacks",
-"MB.AttackCritText": "Crit: x2 damage, target armor reduced one tier",
-"MB.AttackFumbleText": "Fumble: Weapon breaks or is lost",
+"MB.AttackCritText": "Crit: x2 damage, target armor reduced one tier.",
+"MB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
 "MB.Bounty": "Bounty",
 "MB.Bounties": "Bounties",
 "MB.CarryingCapacity": "Carrying Capacity",
@@ -28,8 +28,8 @@
 "MB.DamageReduction": "Damage Reduction",
 "MB.DamageReductionDie": "Damage Reduction Die",
 "MB.Defend": "Defend",
-"MB.DefendCritText": "Crit: Gain free attack",
-"MB.DefendFumbleText": "Fumble: Take double damage, armor reduced one tier",
+"MB.DefendCritText": "Crit: Gain free attack.",
+"MB.DefendFumbleText": "Fumble: Take double damage, armor reduced one tier.",
 "MB.Description": "Description",
 "MB.Details": "Details",
 "MB.EnemiesBegin": "Enemies begin",
