--- a/lang/en.json
+++ b/lang/en.json
@@ -17,7 +17,9 @@
 "MB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
 "MB.Bounty": "Bounty",
 "MB.Bounties": "Bounties",
+"MB.Carrying": "Carrying",
 "MB.CarryingCapacity": "Carrying Capacity",
+"MB.CarryingRule": "STR+8 items or DR+2 on AGI/STR tests.",
 "MB.Class": "Class",
 "MB.ClassName": "Class Name",
 "MB.ClassOmenDie": "Omen Die",
@@ -38,6 +40,7 @@
 "MB.HandedOne": "One-handed",
 "MB.HandedTwo": "Two-handed",
 "MB.HitPoints": "Hit Points",
+"MB.Holds": "holds",
 "MB.IncomingAttack": "Incoming Attack",
 "MB.Initiative": "Initiative",
 "MB.ItemAgilityDRModifier": "Agility DR Modifier",
@@ -80,7 +83,7 @@
 "MB.PlayerInitiative": "Player Initiative",
 "MB.PlusSpecial": "Plus Special",
 "MB.Powers": "Powers",
-"MB.PowersPerDayText": "PRESENCE+d4 times per day",
+"MB.PowersPerDayText": "PRE+d4 times per day",
 "MB.Presence": "Presence",
 "MB.PresenceAbbreviation": "PRE",
 "MB.Scrawls": "Scrawls",
@@ -103,5 +106,5 @@
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
 "MB.WieldAPower": "Wield a Power",
-"MB.WieldAPowerText": "Presence DR12, or -d2 HP and no Powers for 1 hr"
+"MB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr"
 }
