Tweak attack/defend roll text.

--- a/lang/en.json
+++ b/lang/en.json
@@ -70,6 +70,7 @@
 "MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemWeaponType": "Weapon Type",
 "MB.Max": "Max",
+"MB.Melee": "Melee",
 "MB.Miseries": "Miseries",
 "MB.Morale": "Morale",
 "MB.Name": "Name",
@@ -86,6 +87,7 @@
 "MB.PowersPerDayText": "PRE+d4 times per day",
 "MB.Presence": "Presence",
 "MB.PresenceAbbreviation": "PRE",
+"MB.Ranged": "Ranged",
 "MB.Scrawls": "Scrawls",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
