--- a/lang/en.json
+++ b/lang/en.json
@@ -25,6 +25,7 @@
 "MB.ClassOmenDie": "Omen Die",
 "MB.CreatureAttack": "Creature Attack",
 "MB.Current": "Current",
+"MB.CurrentTier": "Current Tier",
 "MB.Damage": "damage",
 "MB.DamageDie": "Damage Die",
 "MB.DamageReduction": "Damage Reduction",
@@ -70,6 +71,7 @@
 "MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemWeaponType": "Weapon Type",
 "MB.Max": "Max",
+"MB.MaxTier": "Max Tier",
 "MB.Melee": "Melee",
 "MB.Miseries": "Miseries",
 "MB.Morale": "Morale",
