Show custom dialog when creating new items.

--- a/lang/en.json
+++ b/lang/en.json
@@ -23,6 +23,7 @@
 "MB.Class": "Class",
 "MB.ClassName": "Class Name",
 "MB.ClassOmenDie": "Omen Die",
+"MB.CreateNewItem": "Create New Item",
 "MB.CreatureAttack": "Creature Attack",
 "MB.Current": "Current",
 "MB.CurrentTier": "Current Tier",
