Make powers-per-day text rollable.

--- a/lang/en.json
+++ b/lang/en.json
@@ -87,6 +87,7 @@
 "MB.PlayerInitiative": "Player Initiative",
 "MB.PlusSpecial": "Plus Special",
 "MB.Powers": "Powers",
+"MB.PowersPerDay": "Powers per day",
 "MB.PowersPerDayText": "PRE+d4 times per day",
 "MB.Presence": "Presence",
 "MB.PresenceAbbreviation": "PRE",
