--- a/lang/en.json
+++ b/lang/en.json
@@ -95,6 +95,8 @@
 "MB.Scrawls": "Scrawls",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
+"MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
+"MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
 "MB.Shield": "Shield",
 "MB.ShieldUseText": "-1 damage, or break to ignore one attack",
 "MB.Silver": "Silver",
