--- a/lang/en.json
+++ b/lang/en.json
@@ -103,6 +103,7 @@
 "MB.Special": "Special",
 "MB.Strength": "Strength",
 "MB.StrengthAbbreviation": "STR",
+"MB.TargetArmor": "Target Armor",
 "MB.Tier": "Tier",
 "MB.Title": "MÖRK BORG",
 "MB.Toughness": "Toughness",
