Add alternateName field to creature.

--- a/lang/en.json
+++ b/lang/en.json
@@ -6,6 +6,7 @@
 "MB.Add": "Add",
 "MB.Agility": "Agility",
 "MB.AgilityAbbreviation": "AGI",
+"MB.AlternateName": "Alternate Name",
 "MB.Armor": "Armor",
 "MB.ArmorTierNone": "None",
 "MB.ArmorTierLight": "Light",
