Remove some unneeded translations.

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,8 +1,4 @@
 {
-"MB.AbilityAgility": "Agility",
-"MB.AbilityPresence": "Presence",
-"MB.AbilityStrength": "Strength",
-"MB.AbilityToughness": "Toughness",
 "MB.Add": "Add",
 "MB.Agility": "Agility",
 "MB.AgilityAbbreviation": "AGI",
@@ -16,8 +12,6 @@
 "MB.Attacks": "Attacks",
 "MB.AttackCritText": "Crit: x2 damage, target armor reduced one tier.",
 "MB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
-"MB.Bounty": "Bounty",
-"MB.Bounties": "Bounties",
 "MB.Carrying": "Carrying",
 "MB.CarryingCapacity": "Carrying Capacity",
 "MB.CarryingRule": "STR+8 items or DR+2 on AGI/STR tests.",
@@ -81,7 +75,6 @@
 "MB.Notes": "Notes",
 "MB.Obituary": "Obituary",
 "MB.Omens": "Omens",
-"MB.PartyInitiative": "Party Initiative",
 "MB.PerDay": "Per Day",
 "MB.PerRest": "Per Rest",
 "MB.PlayerCharactersBegin": "Player Characters begin",
@@ -98,6 +91,7 @@
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
 "MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
+"MB.SheetClassOutcast": "Default Mork Borg Outcast Sheet",
 "MB.Shield": "Shield",
 "MB.ShieldUseText": "-1 damage, or break to ignore one attack",
 "MB.Silver": "Silver",
