Start styling class sheet.

--- a/lang/en.json
+++ b/lang/en.json
@@ -16,10 +16,12 @@
 "MB.CarryingCapacity": "Carrying Capacity",
 "MB.CarryingRule": "STR+8 items or DR+2 on AGI/STR tests.",
 "MB.Class": "Class",
+"MB.ClassAbilities": "Abilities",
 "MB.ClassName": "Class Name",
 "MB.ClassOmenDie": "Omen Die",
+"MB.ClassStartingHitPoints": "Starting Hit Points",
+"MB.ClassStartingSilver": "Starting Silver",
 "MB.CreateNewItem": "Create New Item",
-"MB.CreatureAttack": "Creature Attack",
 "MB.Current": "Current",
 "MB.CurrentTier": "Current Tier",
 "MB.Damage": "damage",
@@ -55,14 +57,12 @@
 "MB.ItemArmorTier": "Tier",
 "MB.ItemTypeArmor": "Armor",
 "MB.ItemTypeArmorPlural": "Armor",
+"MB.ItemTypeClass": "Class",
 "MB.ItemTypeContainer": "Container",
-"MB.ItemTypeContainerPlural": "Containers",
 "MB.ItemTypeMisc": "Misc",
-"MB.ItemTypeMiscPlural": "Equipment",
 "MB.ItemTypeScroll": "Scroll",
 "MB.ItemTypeScrollPlural": "Scrolls",
 "MB.ItemTypeShield": "Shield",
-"MB.ItemTypeShieldPlural": "Shields",
 "MB.ItemTypeWeapon": "Weapon",
 "MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemWeaponType": "Weapon Type",
