Finish first pass of class sheet.

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,6 @@
 {
 "MB.Add": "Add",
+"MB.Abilities": "Abilities",
 "MB.Agility": "Agility",
 "MB.AgilityAbbreviation": "AGI",
 "MB.AlternateName": "Alternate Name",
