Add carryWeight and containerSpace for items.

--- a/lang/en.json
+++ b/lang/en.json
@@ -16,6 +16,7 @@
 "MB.Carrying": "Carrying",
 "MB.CarryingCapacity": "Carrying Capacity",
 "MB.CarryingRule": "STR+8 items or DR+2 on AGI/STR tests.",
+"MB.CarryWeight": "Carry Weight",
 "MB.Class": "Class",
 "MB.ClassAbilities": "Abilities",
 "MB.ClassName": "Class Name",
@@ -23,6 +24,7 @@
 "MB.ClassStartingHitPoints": "Starting Hit Points",
 "MB.ClassStartingSilver": "Starting Silver",
 "MB.CreateNewItem": "Create New Item",
+"MB.ContainerSpace": "Container Space",
 "MB.Current": "Current",
 "MB.CurrentTier": "Current Tier",
 "MB.Damage": "damage",
