Calculate and show container count/capacity.

--- a/lang/en.json
+++ b/lang/en.json
@@ -15,7 +15,7 @@
 "MB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
 "MB.Carrying": "Carrying",
 "MB.CarryingCapacity": "Carrying Capacity",
-"MB.CarryingRule": "STR+8 items or DR+2 on AGI/STR tests.",
+"MB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
 "MB.CarryWeight": "Carry Weight",
 "MB.Class": "Class",
 "MB.ClassAbilities": "Abilities",
@@ -44,6 +44,7 @@
 "MB.HitPoints": "Hit Points",
 "MB.Holds": "holds",
 "MB.IncomingAttack": "Incoming Attack",
+"MB.InContainer": "In Container",
 "MB.Initiative": "Initiative",
 "MB.ItemAgilityDRModifier": "Agility DR Modifier",
 "MB.ItemCapacity": "Capacity",
