--- a/lang/en.json
+++ b/lang/en.json
@@ -95,7 +95,7 @@
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
 "MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
-"MB.SheetClassOutcast": "Default Mork Borg Outcast Sheet",
+"MB.SheetClassFollower": "Default Mork Borg Follower Sheet",
 "MB.Shield": "Shield",
 "MB.ShieldUseText": "-1 damage, or break to ignore one attack",
 "MB.Silver": "Silver",
