Implement follower sheet. Serious DRY refactoring will be needed in the future.

--- a/lang/en.json
+++ b/lang/en.json
@@ -100,6 +100,7 @@
 "MB.ShieldUseText": "-1 damage, or break to ignore one attack",
 "MB.Silver": "Silver",
 "MB.Special": "Special",
+"MB.Speciality": "Speciality",
 "MB.Strength": "Strength",
 "MB.StrengthAbbreviation": "STR",
 "MB.TargetArmor": "Target Armor",
@@ -107,7 +108,9 @@
 "MB.Title": "MÖRK BORG",
 "MB.Toughness": "Toughness",
 "MB.ToughnessAbbreviation": "TOU",
+"MB.Trait": "Trait",
 "MB.Treasures": "Treasures",
+"MB.Value": "Value",
 "MB.Violence": "Violence",
 "MB.Unequipped": "Unequipped",
 "MB.UsesRemaining": "Uses Remaining",
