--- a/lang/en.json
+++ b/lang/en.json
@@ -1,16 +1,23 @@
 {
 "MB.Add": "Add",
 "MB.Abilities": "Abilities",
-"MB.Agility": "Agility",
-"MB.AgilityAbbreviation": "AGI",
+"MB.AbilityAgility": "Agility",
+"MB.AbilityAgilityAbbrev": "AGI",
+"MB.AbilityPresence": "Presence",
+"MB.AbilityPresenceAbbrev": "PRE",
+"MB.AbilityStrength": "Strength",
+"MB.AbilityStrengthAbbrev": "STR",
+"MB.AbilityToughness": "Toughness",
+"MB.AbilityToughnessAbbrev": "TOU",
 "MB.AlternateName": "Alternate Name",
 "MB.Armor": "Armor",
+"MB.ArmorCurrentTier": "Current Tier",
+"MB.ArmorMaxTier": "Max Tier",
 "MB.ArmorTierNone": "None",
 "MB.ArmorTierLight": "Light",
 "MB.ArmorTierMedium": "Medium",
 "MB.ArmorTierHeavy": "Heavy",
 "MB.Attack": "Attack",
-"MB.Attacks": "Attacks",
 "MB.AttackCritText": "Crit: x2 damage, target armor reduced one tier.",
 "MB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
 "MB.Carrying": "Carrying",
@@ -19,14 +26,16 @@
 "MB.CarryWeight": "Carry Weight",
 "MB.Class": "Class",
 "MB.ClassAbilities": "Abilities",
-"MB.ClassName": "Class Name",
 "MB.ClassOmenDie": "Omen Die",
 "MB.ClassStartingHitPoints": "Starting Hit Points",
 "MB.ClassStartingSilver": "Starting Silver",
 "MB.CreateNewItem": "Create New Item",
+"MB.CreatureArmor": "Armor",
+"MB.CreatureAttack": "Attack",
+"MB.CreatureSpecial": "Special",
+"MB.ContainerAmountIn": "In Container",
+"MB.ContainerHolds": "holds",
 "MB.ContainerSpace": "Container Space",
-"MB.Current": "Current",
-"MB.CurrentTier": "Current Tier",
 "MB.Damage": "damage",
 "MB.DamageDie": "Damage Die",
 "MB.DamageReduction": "Damage Reduction",
@@ -35,16 +44,14 @@
 "MB.DefendCritText": "Crit: Gain free attack.",
 "MB.DefendFumbleText": "Fumble: Take x2 damage, armor reduced one tier.",
 "MB.Description": "Description",
-"MB.Details": "Details",
-"MB.EnemiesBegin": "Enemies begin",
 "MB.Equipment": "Equipment",
-"MB.Equipped": "Equipped",
+"MB.FollowerSpeciality": "Speciality",
+"MB.FollowerTrait": "Trait",
+"MB.FollowerValue": "Value",
 "MB.HandedOne": "One-handed",
 "MB.HandedTwo": "Two-handed",
 "MB.HitPoints": "Hit Points",
-"MB.Holds": "holds",
 "MB.IncomingAttack": "Incoming Attack",
-"MB.InContainer": "In Container",
 "MB.Initiative": "Initiative",
 "MB.ItemAgilityDRModifier": "Agility DR Modifier",
 "MB.ItemCapacity": "Capacity",
@@ -54,11 +61,11 @@
 "MB.ItemDefenseDRModifier": "Defense DR Modifier",
 "MB.ItemDelete": "Delete Item",
 "MB.ItemEdit": "Edit Item",
+"MB.ItemEquipped": "Equipped",
 "MB.ItemHanded": "Handed",  
 "MB.ItemName": "Item Name",
 "MB.ItemPrice": "Price",
 "MB.ItemScrollType": "Scroll Type",
-"MB.ItemArmorTier": "Tier",
 "MB.ItemTypeArmor": "Armor",
 "MB.ItemTypeArmorPlural": "Armor",
 "MB.ItemTypeClass": "Class",
@@ -69,26 +76,17 @@
 "MB.ItemTypeShield": "Shield",
 "MB.ItemTypeWeapon": "Weapon",
 "MB.ItemTypeWeaponPlural": "Weapons",
+"MB.ItemUnequipped": "Unequipped",
 "MB.ItemWeaponType": "Weapon Type",
-"MB.Max": "Max",
-"MB.MaxTier": "Max Tier",
-"MB.Melee": "Melee",
 "MB.Miseries": "Miseries",
 "MB.Morale": "Morale",
 "MB.Name": "Name",
-"MB.Obituary": "Obituary",
 "MB.Omens": "Omens",
 "MB.PerDay": "Per Day",
 "MB.PerRest": "Per Rest",
-"MB.PlayerCharactersBegin": "Player Characters begin",
-"MB.PlayerInitiative": "Player Initiative",
-"MB.PlusSpecial": "Plus Special",
 "MB.Powers": "Powers",
-"MB.PowersPerDay": "Powers per day",
 "MB.PowersPerDayText": "PRE+d4 times per day",
-"MB.Presence": "Presence",
-"MB.PresenceAbbreviation": "PRE",
-"MB.Ranged": "Ranged",
+"MB.PowerUsesRemaining": "Uses Remaining",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
@@ -97,21 +95,15 @@
 "MB.Shield": "Shield",
 "MB.ShieldUseText": "-1 damage, or break to ignore one attack",
 "MB.Silver": "Silver",
-"MB.Special": "Special",
-"MB.Speciality": "Speciality",
-"MB.Strength": "Strength",
-"MB.StrengthAbbreviation": "STR",
+"MB.TabDescription": "Description",
+"MB.TabDetails": "Details",
+"MB.TabObituary": "Obituary",
+"MB.TabPowers": "Powers",
+"MB.TabTreasures": "Treasures",
+"MB.TabViolence": "Violence",
 "MB.TargetArmor": "Target Armor",
 "MB.Tier": "Tier",
 "MB.Title": "MÖRK BORG",
-"MB.Toughness": "Toughness",
-"MB.ToughnessAbbreviation": "TOU",
-"MB.Trait": "Trait",
-"MB.Treasures": "Treasures",
-"MB.Value": "Value",
-"MB.Violence": "Violence",
-"MB.Unequipped": "Unequipped",
-"MB.UsesRemaining": "Uses Remaining",
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
 "MB.WieldAPower": "Wield a Power",
