Updated SV translations from @AMediocreDad.

--- a/lang/sv.json
+++ b/lang/sv.json
@@ -9,58 +9,58 @@
 "MB.AbilityToughness": "Tålighet",
 "MB.AbilityToughnessAbbrev": "TÅL",
 "MB.Add": "Lägg till",
-"MB.AlternateName": "Alternativ Namn",
+"MB.AlternateName": "Alternativt Namn",
 "MB.Armor": "Rustning",
 "MB.ArmorCurrentTier": "Nuvarande Nivå",
 "MB.ArmorMaxTier": "Max Nivå",
 "MB.ArmorTierHeavy": "Tung",
 "MB.ArmorTierLight": "Lätt",
-"MB.ArmorTierMedium": "Medel",
+"MB.ArmorTierMedium": "Medium",
 "MB.ArmorTierNone": "Ingen",
 "MB.Attack": "Attack",
-"MB.AttackCritText": "Succé: ×2 skada, rustningen/ skyddet sänks också et nivå.",
+"MB.AttackCritText": "Succé: ×2 skada, rustningen/ skyddet sänks också en nivå.",
 "MB.AttackFumbleText": "Fummel: Vapnet går sönder eller förloras.",
 "MB.CarryWeight": "Vikt",
 "MB.Carrying": "Bärande",
-"MB.CarryingCapacity": "Lastkapacitet",
+"MB.CarryingCapacity": "Bärförmåga",
 "MB.CarryingRule": "STY+8 objekt eller SG+2 SMI/STY test.",
 "MB.Class": "Klass",
 "MB.ClassAbilities": "Egenskaper",
-"MB.ClassOmenDie": "Järtecken Tärning",
+"MB.ClassOmenDie": "Järtecknets Tärning",
 "MB.ClassStartingHitPoints": "Börjande Träffpoäng",
 "MB.ClassStartingSilver": "Börjande Silver",
 "MB.ContainerAmountIn": "I en Behållare",
 "MB.ContainerHolds": "håller",
-"MB.ContainerSpace": "Volymn",
-"MB.CreateNewItem": "Skapa objekt",
+"MB.ContainerSpace": "Volym",
+"MB.CreateNewItem": "Skapa Nytt Objekt",
 "MB.CreatureArmor": "Rustning",
 "MB.CreatureAttack": "Attack",
 "MB.CreatureSpecial": "Särskild",
 "MB.Damage": "skada",
-"MB.DamageDie": "Skada Tärning",
-"MB.DamageReduction": "Skadereduktion",
-"MB.DamageReductionDie": "Skadereduktion Tärning",
+"MB.DamageDie": "Skadetärning",
+"MB.DamageReduction": "Skadreduktion",
+"MB.DamageReductionDie": "Skadreduktion Tärning",
 "MB.Defend": "Försvar",
 "MB.DefendCritText": "Succé: RP får en fri attack.",
 "MB.DefendFumbleText": "Fummel: RP tar dubbel skada, rustningen sänks också en nivå.",
 "MB.Description": "Beskrivning",
 "MB.Equipment": "Utrustning",
 "MB.FollowerSpeciality": "Specialitet",
-"MB.FollowerTrait": "Drag",
-"MB.FollowerValue": "Varde",
+"MB.FollowerTrait": "Följardrag",
+"MB.FollowerValue": "Följarvärde",
 "MB.HandedOne": "Enhands",
-"MB.HandedTwo": "Zweihand",
+"MB.HandedTwo": "Tvåhands",
 "MB.HitPoints": "Träffpoäng",
 "MB.IncomingAttack": "Inkommande Attack",
 "MB.Initiative": "Initiativ",
 "MB.ItemAgilityDRModifier": "Smidighet SG Modifikation",
 "MB.ItemCapacity": "Kapacitet",
-"MB.ItemCreate": "Skapa objekt",
-"MB.ItemDamageDie": "Skada Tärning",
-"MB.ItemDamageReductionDie": "Skadereduktion Tärning",
+"MB.ItemCreate": "Skapa Objekt",
+"MB.ItemDamageDie": "Skadetärning",
+"MB.ItemDamageReductionDie": "Skadreduktion Tärning",
 "MB.ItemDefenseDRModifier": "Försvar SG Modifikation",
-"MB.ItemDelete": "Radera objekt",
-"MB.ItemEdit": "Redigera objekt",
+"MB.ItemDelete": "Radera Objekt",
+"MB.ItemEdit": "Redigera Objekt",
 "MB.ItemEquipped": "Utrustad",
 "MB.ItemHanded": "Räckte",
 "MB.ItemName": "Objekt Namn",
@@ -89,11 +89,11 @@
 "MB.PowersPerDayText": "NÄR+t4 antal per dygn",
 "MB.ScrollTypeSacred": "Helig",
 "MB.ScrollTypeUnclean": "Vanhelga",
-"MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
-"MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
-"MB.SheetClassFollower": "Default Mork Borg Follower Sheet",
+"MB.SheetClassCharacter": "Mörk Borg Rollformulär",
+"MB.SheetClassCreature": "Mörk Borg Varelseformulär",
+"MB.SheetClassFollower": "Mörk Borg Följerformulär",
 "MB.Shield": "Sköld",
-"MB.ShieldUseText": "-1 skada, eller break to ignore one attack",
+"MB.ShieldUseText": "-1 skada, eller låt bryta sönder for at ignorera en attack",
 "MB.Silver": "Silver",
 "MB.TabDescription": "Beskrivning",
 "MB.TabDetails": "Detaljer",
@@ -101,11 +101,11 @@
 "MB.TabPowers": "Krafter",
 "MB.TabTreasures": "Skatter",
 "MB.TabViolence": "Våld",
-"MB.TargetArmor": "Mål Rustning",
+"MB.TargetArmor": "Målets Rustningsvärde",
 "MB.Tier": "Nivå",
 "MB.Title": "MÖRK BORG",
 "MB.WeaponTypeMelee": "Närkamp",
 "MB.WeaponTypeRanged": "Avstånd",
 "MB.WieldAPower": "Nyttja en Kraft",
-"MB.WieldAPowerText": "NÄR SG12 eller -t2 TP och inga Krafter i 1 tim."       
+"MB.WieldAPowerText": "NÄR SG12 eller -t2 TP och inga Krafter i 1 tim."
 }
