Add morale and reaction rolls and roll cards.

--- a/lang/en.json
+++ b/lang/en.json
@@ -44,6 +44,7 @@
 "MB.DefendCritText": "Crit: Gain free attack.",
 "MB.DefendFumbleText": "Fumble: Take x2 damage, armor reduced one tier.",
 "MB.Description": "Description",
+"MB.Effect": "Effect",
 "MB.Equipment": "Equipment",
 "MB.FollowerSpeciality": "Speciality",
 "MB.FollowerTrait": "Trait",
@@ -53,6 +54,7 @@
 "MB.HitPoints": "Hit Points",
 "MB.IncomingAttack": "Incoming Attack",
 "MB.Initiative": "Initiative",
+"MB.Is": "is",
 "MB.ItemAgilityDRModifier": "Agility DR Modifier",
 "MB.ItemCapacity": "Capacity",
 "MB.ItemCreate": "Create Item",
@@ -80,6 +82,8 @@
 "MB.ItemWeaponType": "Weapon Type",
 "MB.Miseries": "Miseries",
 "MB.Morale": "Morale",
+"MB.MoraleFlees": "Flees",
+"MB.MoraleSurrenders": "Surrenders",
 "MB.Name": "Name",
 "MB.Omens": "Omens",
 "MB.PerDay": "Per Day",
@@ -87,6 +91,12 @@
 "MB.Powers": "Powers",
 "MB.PowersPerDayText": "PRE+d4 times per day",
 "MB.PowerUsesRemaining": "Uses Remaining",
+"MB.Reaction": "Reaction",
+"MB.ReactionAlmostFriendly": "Almost friendly",
+"MB.ReactionAngered": "Angered",
+"MB.ReactionHelpful": "Helpful",
+"MB.ReactionIndifferent": "Indifferent",
+"MB.ReactionKill": "Kill!",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
@@ -95,6 +105,7 @@
 "MB.Shield": "Shield",
 "MB.ShieldUseText": "-1 damage, or break to ignore one attack",
 "MB.Silver": "Silver",
+"MB.StandsFirm": "Stands firm",
 "MB.TabDescription": "Description",
 "MB.TabDetails": "Details",
 "MB.TabObituary": "Obituary",
