--- a/lang/sv.json
+++ b/lang/sv.json
@@ -44,6 +44,7 @@
 "MB.DefendCritText": "Succé: RP får en fri attack.",
 "MB.DefendFumbleText": "Fummel: RP tar dubbel skada, rustningen sänks också en nivå.",
 "MB.Description": "Beskrivning",
+"MB.Effect": "Effekt",
 "MB.Equipment": "Utrustning",
 "MB.FollowerSpeciality": "Specialitet",
 "MB.FollowerTrait": "Följardrag",
@@ -53,6 +54,7 @@
 "MB.HitPoints": "Träffpoäng",
 "MB.IncomingAttack": "Inkommande Attack",
 "MB.Initiative": "Initiativ",
+"MB.Is": "är",
 "MB.ItemAgilityDRModifier": "Smidighet SG Modifikation",
 "MB.ItemCapacity": "Kapacitet",
 "MB.ItemCreate": "Skapa Objekt",
@@ -80,6 +82,8 @@
 "MB.ItemWeaponType": "Vapentyp",
 "MB.Miseries": "Plågor",
 "MB.Morale": "Moral",
+"MB.MoraleFlees": "Flyr",
+"MB.MoraleSurrenders": "Ger upp",
 "MB.Name": "Namn",
 "MB.Omens": "Järtecken",
 "MB.PerDay": "Per Dygn",
@@ -87,6 +91,12 @@
 "MB.PowerUsesRemaining": "Gånger",
 "MB.Powers": "Krafter",
 "MB.PowersPerDayText": "NÄR+t4 antal per dygn",
+"MB.Reaction": "Reaktion",
+"MB.ReactionAlmostFriendly": "Veligt vänlig",
+"MB.ReactionAngered": "Förbannad",
+"MB.ReactionHelpful": "Hjälpsam",
+"MB.ReactionIndifferent": "Obrydd",
+"MB.ReactionKill": "Döda!",
 "MB.ScrollTypeSacred": "Helig",
 "MB.ScrollTypeUnclean": "Vanhelga",
 "MB.SheetClassCharacter": "Mörk Borg Rollformulär",
@@ -95,6 +105,7 @@
 "MB.Shield": "Sköld",
 "MB.ShieldUseText": "-1 skada, eller låt bryta sönder for at ignorera en attack",
 "MB.Silver": "Silver",
+"MB.StandsFirm": "Står fast",
 "MB.TabDescription": "Beskrivning",
 "MB.TabDetails": "Detaljer",
 "MB.TabObituary": "Dödsruna",
