Add morale button to Follower sheet, and clean up code.

--- a/lang/en.json
+++ b/lang/en.json
@@ -44,7 +44,6 @@
 "MB.DefendCritText": "Crit: Gain free attack.",
 "MB.DefendFumbleText": "Fumble: Take x2 damage, armor reduced one tier.",
 "MB.Description": "Description",
-"MB.Effect": "Effect",
 "MB.Equipment": "Equipment",
 "MB.FollowerSpeciality": "Speciality",
 "MB.FollowerTrait": "Trait",
@@ -86,6 +85,7 @@
 "MB.MoraleSurrenders": "Surrenders",
 "MB.Name": "Name",
 "MB.Omens": "Omens",
+"MB.Outcome": "Outcome",
 "MB.PerDay": "Per Day",
 "MB.PerRest": "Per Rest",
 "MB.Powers": "Powers",
