--- a/lang/sv.json
+++ b/lang/sv.json
@@ -86,6 +86,7 @@
 "MB.MoraleSurrenders": "Ger upp",
 "MB.Name": "Namn",
 "MB.Omens": "Järtecken",
+"MB.Outcome": "Resultat",
 "MB.PerDay": "Per Dygn",
 "MB.PerRest": "Per Vila",
 "MB.PowerUsesRemaining": "Gånger",
