Add attack dialog and update attack logic and roll card.

--- a/lang/en.json
+++ b/lang/en.json
@@ -44,12 +44,14 @@
 "MB.DefendCritText": "Crit: Gain free attack.",
 "MB.DefendFumbleText": "Fumble: Take x2 damage, armor reduced one tier.",
 "MB.Description": "Description",
+"MB.DR": "DR",
 "MB.Equipment": "Equipment",
 "MB.FollowerSpeciality": "Speciality",
 "MB.FollowerTrait": "Trait",
 "MB.FollowerValue": "Value",
 "MB.HandedOne": "One-handed",
 "MB.HandedTwo": "Two-handed",
+"MB.Hit": "HIT",
 "MB.HitPoints": "Hit Points",
 "MB.IncomingAttack": "Incoming Attack",
 "MB.Initiative": "Initiative",
@@ -80,6 +82,7 @@
 "MB.ItemUnequipped": "Unequipped",
 "MB.ItemWeaponType": "Weapon Type",
 "MB.Miseries": "Miseries",
+"MB.Miss": "MISS",
 "MB.Morale": "Morale",
 "MB.MoraleFlees": "Flees",
 "MB.MoraleSurrenders": "Surrenders",
@@ -112,9 +115,12 @@
 "MB.TabPowers": "Powers",
 "MB.TabTreasures": "Treasures",
 "MB.TabViolence": "Violence",
+"MB.Take": "Take",
 "MB.TargetArmor": "Target Armor",
 "MB.Tier": "Tier",
 "MB.Title": "MÖRK BORG",
+"MB.Type": "Type",
+"MB.Versus": "Versus",
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
 "MB.WieldAPower": "Wield a Power",
