--- a/lang/sv.json
+++ b/lang/sv.json
@@ -44,13 +44,14 @@
 "MB.DefendCritText": "Succé: RP får en fri attack.",
 "MB.DefendFumbleText": "Fummel: RP tar dubbel skada, rustningen sänks också en nivå.",
 "MB.Description": "Beskrivning",
-"MB.Effect": "Effekt",
+"MB.DR": "SG",
 "MB.Equipment": "Utrustning",
 "MB.FollowerSpeciality": "Specialitet",
 "MB.FollowerTrait": "Följardrag",
 "MB.FollowerValue": "Följarvärde",
 "MB.HandedOne": "Enhands",
 "MB.HandedTwo": "Tvåhands",
+"MB.Hit": "TRÄFFA",
 "MB.HitPoints": "Träffpoäng",
 "MB.IncomingAttack": "Inkommande Attack",
 "MB.Initiative": "Initiativ",
@@ -81,6 +82,7 @@
 "MB.ItemUnequipped": "Outrustad",
 "MB.ItemWeaponType": "Vapentyp",
 "MB.Miseries": "Plågor",
+"MB.Miss": "MISSA",
 "MB.Morale": "Moral",
 "MB.MoraleFlees": "Flyr",
 "MB.MoraleSurrenders": "Ger upp",
@@ -113,9 +115,12 @@
 "MB.TabPowers": "Krafter",
 "MB.TabTreasures": "Skatter",
 "MB.TabViolence": "Våld",
+"MB.Take": "Ta",
 "MB.TargetArmor": "Målets Rustningsvärde",
 "MB.Tier": "Nivå",
 "MB.Title": "MÖRK BORG",
+"MB.Type": "Typ",
+"MB.Versus": "Mot",
 "MB.WeaponTypeMelee": "Närkamp",
 "MB.WeaponTypeRanged": "Avstånd",
 "MB.WieldAPower": "Nyttja en Kraft",
