Prompt for defend DR and incoming attack damage, and calculate hit/miss/total dmg for defend roll card.

--- a/lang/en.json
+++ b/lang/en.json
@@ -44,6 +44,7 @@
 "MB.DefendCritText": "Crit: Gain free attack.",
 "MB.DefendFumbleText": "Fumble: Take x2 damage, armor reduced one tier.",
 "MB.Description": "Description",
+"MB.Dodge": "Dodge",
 "MB.DR": "DR",
 "MB.Equipment": "Equipment",
 "MB.FollowerSpeciality": "Speciality",
