--- a/lang/sv.json
+++ b/lang/sv.json
@@ -44,6 +44,7 @@
 "MB.DefendCritText": "Succé: RP får en fri attack.",
 "MB.DefendFumbleText": "Fummel: RP tar dubbel skada, rustningen sänks också en nivå.",
 "MB.Description": "Beskrivning",
+"MB.Dodge": "Undvika",
 "MB.DR": "SG",
 "MB.Equipment": "Utrustning",
 "MB.FollowerSpeciality": "Specialitet",
