Change attack/defend dialog button labels to 'Roll'.

--- a/lang/sv.json
+++ b/lang/sv.json
@@ -102,6 +102,7 @@
 "MB.ReactionHelpful": "Hjälpsam",
 "MB.ReactionIndifferent": "Obrydd",
 "MB.ReactionKill": "Döda!",
+"MB.Roll": "Rulla",
 "MB.ScrollTypeSacred": "Helig",
 "MB.ScrollTypeUnclean": "Vanhelga",
 "MB.SheetClassCharacter": "Mörk Borg Rollformulär",
@@ -122,7 +123,6 @@
 "MB.Tier": "Nivå",
 "MB.Title": "MÖRK BORG",
 "MB.Type": "Typ",
-"MB.Versus": "Mot",
 "MB.WeaponTypeMelee": "Närkamp",
 "MB.WeaponTypeRanged": "Avstånd",
 "MB.WieldAPower": "Nyttja en Kraft",
