--- a/lang/en.json
+++ b/lang/en.json
@@ -102,6 +102,7 @@
 "MB.ReactionHelpful": "Helpful",
 "MB.ReactionIndifferent": "Indifferent",
 "MB.ReactionKill": "Kill!",
+"MB.Roll": "Roll",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
@@ -122,7 +123,6 @@
 "MB.Tier": "Tier",
 "MB.Title": "MÖRK BORG",
 "MB.Type": "Type",
-"MB.Versus": "Versus",
 "MB.WeaponTypeMelee": "Melee",
 "MB.WeaponTypeRanged": "Ranged",
 "MB.WieldAPower": "Wield a Power",
