Partial implementation of ability roll cards and DR modifiers from armor.

--- a/lang/en.json
+++ b/lang/en.json
@@ -120,6 +120,7 @@
 "MB.TabViolence": "Violence",
 "MB.Take": "Take",
 "MB.TargetArmor": "Target Armor",
+"MB.Test": "Test",
 "MB.Tier": "Tier",
 "MB.Title": "MÖRK BORG",
 "MB.Type": "Type",
