--- a/lang/sv.json
+++ b/lang/sv.json
@@ -120,6 +120,7 @@
 "MB.TabViolence": "Våld",
 "MB.Take": "Ta",
 "MB.TargetArmor": "Målets Rustningsvärde",
+"MB.Test": "Test",
 "MB.Tier": "Nivå",
 "MB.Title": "MÖRK BORG",
 "MB.Type": "Typ",
