--- a/lang/sv.json
+++ b/lang/sv.json
@@ -46,6 +46,7 @@
 "MB.Description": "Beskrivning",
 "MB.Dodge": "Undvika",
 "MB.DR": "SG",
+"MB.Encumbered": "Överbelastad",
 "MB.EquipAWeaponToAttack": "Utrusta ett vapen för att attackera.",
 "MB.Equipment": "Utrustning",
 "MB.FollowerSpeciality": "Specialitet",
