Add a read-only modified defense DR field, update by JS.

--- a/lang/en.json
+++ b/lang/en.json
@@ -20,6 +20,7 @@
 "MB.Attack": "Attack",
 "MB.AttackCritText": "Crit: x2 damage, target armor reduced one tier.",
 "MB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
+"MB.Base": "Base",
 "MB.Carrying": "Carrying",
 "MB.CarryingCapacity": "Carrying Capacity",
 "MB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
@@ -86,6 +87,7 @@
 "MB.ItemWeaponType": "Weapon Type",
 "MB.Miseries": "Miseries",
 "MB.Miss": "MISS",
+"MB.Modified": "Modified",
 "MB.Morale": "Morale",
 "MB.MoraleFlees": "Flees",
 "MB.MoraleSurrenders": "Surrenders",
