Stub out Special item type.

--- a/lang/sv.json
+++ b/lang/sv.json
@@ -80,6 +80,7 @@
 "MB.ItemTypeScroll": "Pergamentrulle",
 "MB.ItemTypeScrollPlural": "Pergamentrullar",
 "MB.ItemTypeShield": "Sköld",
+"MB.ItemTypeSpecial": "Särskild",
 "MB.ItemTypeWeapon": "Vapen",
 "MB.ItemTypeWeaponPlural": "Vapen",
 "MB.ItemUnequipped": "Outrustad",
