--- a/lang/en.json
+++ b/lang/en.json
@@ -81,6 +81,7 @@
 "MB.ItemTypeScroll": "Scroll",
 "MB.ItemTypeScrollPlural": "Scrolls",
 "MB.ItemTypeShield": "Shield",
+"MB.ItemTypeSpecial": "Special",
 "MB.ItemTypeWeapon": "Weapon",
 "MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemUnequipped": "Unequipped",
