First version of Special tab.

--- a/lang/en.json
+++ b/lang/en.json
@@ -81,7 +81,8 @@
 "MB.ItemTypeScroll": "Scroll",
 "MB.ItemTypeScrollPlural": "Scrolls",
 "MB.ItemTypeShield": "Shield",
-"MB.ItemTypeSpecial": "Special",
+"MB.ItemTypeSpecial": "Special Ability",
+"MB.ItemTypeSpecialPlural": "Special Abilities",
 "MB.ItemTypeWeapon": "Weapon",
 "MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemUnequipped": "Unequipped",
@@ -107,6 +108,8 @@
 "MB.ReactionIndifferent": "Indifferent",
 "MB.ReactionKill": "Kill!",
 "MB.Roll": "Roll",
+"MB.RollFormula": "Roll Formula",
+"MB.RollLabel": "Roll Label",
 "MB.ScrollTypeSacred": "Sacred",
 "MB.ScrollTypeUnclean": "Unclean",
 "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
@@ -120,6 +123,7 @@
 "MB.TabDetails": "Details",
 "MB.TabObituary": "Obituary",
 "MB.TabPowers": "Powers",
+"MB.TabSpecials": "Special",
 "MB.TabTreasures": "Treasures",
 "MB.TabViolence": "Violence",
 "MB.Take": "Take",
