--- a/lang/en.json
+++ b/lang/en.json
@@ -77,12 +77,12 @@
 "MB.ItemTypeArmorPlural": "Armor",
 "MB.ItemTypeClass": "Class",
 "MB.ItemTypeContainer": "Container",
+"MB.ItemTypeFeat": "Feat",
+"MB.ItemTypeFeatPlural": "Feats",
 "MB.ItemTypeMisc": "Misc",
 "MB.ItemTypeScroll": "Scroll",
 "MB.ItemTypeScrollPlural": "Scrolls",
 "MB.ItemTypeShield": "Shield",
-"MB.ItemTypeSpecial": "Special Ability",
-"MB.ItemTypeSpecialPlural": "Special Abilities",
 "MB.ItemTypeWeapon": "Weapon",
 "MB.ItemTypeWeaponPlural": "Weapons",
 "MB.ItemUnequipped": "Unequipped",
@@ -121,9 +121,9 @@
 "MB.StandsFirm": "Stands firm",
 "MB.TabDescription": "Description",
 "MB.TabDetails": "Details",
+"MB.TabFeats": "Feats",
 "MB.TabObituary": "Obituary",
 "MB.TabPowers": "Powers",
-"MB.TabSpecials": "Special",
 "MB.TabTreasures": "Treasures",
 "MB.TabViolence": "Violence",
 "MB.Take": "Take",
